[gd_scene load_steps=3 format=3 uid="uid://budqy847qvlqs"]

[ext_resource type="Script" path="res://main.gd" id="1"]
[ext_resource type="Script" path="res://admob-lib/admob.gd" id="2"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ItemList" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -51.5
offset_right = 273.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 100
columns = 3

[node name="BtnReload" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Reload"

[node name="BtnInterstitial" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
disabled = true
text = "Show Interstitial"

[node name="BtnBannerResize" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
disabled = true
text = "Resize Banner"

[node name="BtnRequestConsentInfoUpdate" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Request Consent"

[node name="BtnResetConsent" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "Reset Consent"

[node name="BtnBanner" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
disabled = true
toggle_mode = true
text = "Show/Hide Banner"

[node name="BtnBannerMove" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
disabled = true
toggle_mode = true
text = "Move Banner"

[node name="BtnRewardedVideo" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
disabled = true
text = "Show Rewarded Video"

[node name="BtnRewardedInterstitial" type="Button" parent="CanvasLayer/ItemList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
disabled = true
text = "Show Rewarded Interstitial"

[node name="DebugOut" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
text = "
"
scroll_following = true

[node name="AdMob" type="Node" parent="."]
script = ExtResource("2")
banner_id = "ca-app-pub-3940256099942544/6300978111"
interstitial_id = "ca-app-pub-3940256099942544/1033173712"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"
rewarded_interstitial_id = "ca-app-pub-3940256099942544/5354046379"
is_personalized = false

[connection signal="pressed" from="CanvasLayer/ItemList/BtnReload" to="." method="_on_BtnReload_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/BtnInterstitial" to="." method="_on_BtnInterstitial_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/BtnBannerResize" to="." method="_on_BtnBannerResize_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/BtnRequestConsentInfoUpdate" to="." method="_on_BtnRequestConsentInfoUpdate_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/BtnResetConsent" to="." method="_on_BtnResetConsent_pressed"]
[connection signal="toggled" from="CanvasLayer/ItemList/BtnBanner" to="." method="_on_BtnBanner_toggled"]
[connection signal="toggled" from="CanvasLayer/ItemList/BtnBannerMove" to="." method="_on_BtnBannerMove_toggled"]
[connection signal="pressed" from="CanvasLayer/ItemList/BtnRewardedVideo" to="." method="_on_BtnRewardedVideo_pressed"]
[connection signal="pressed" from="CanvasLayer/ItemList/BtnRewardedInterstitial" to="." method="_on_BtnRewardedInterstitial_pressed"]
[connection signal="banner_loaded" from="AdMob" to="." method="_on_AdMob_banner_loaded"]
[connection signal="interstitial_loaded" from="AdMob" to="." method="_on_AdMob_interstitial_loaded"]
[connection signal="rewarded_interstitial_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_interstitial_loaded"]
[connection signal="rewarded_video_loaded" from="AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
